third_party/move/move-compiler-v2/tests/checking/abilities/globals.exp

Diagnostics:
error: type `R` does not have expected ability `key`
  ┌─ tests/checking/abilities/globals.move:6:20
  │
6 │         move_to(s, R{f: 1});
  │                    ^^^^^^^

error: type `R` does not have expected ability `key`
   ┌─ tests/checking/abilities/globals.move:10:9
   │
10 │         exists<R>(a)
   │         ^^^^^^^^^^^^

error: type `R` does not have expected ability `key`
   ┌─ tests/checking/abilities/globals.move:14:17
   │
14 │         let r = borrow_global<R>(a);
   │                 ^^^^^^^^^^^^^^^^^^^

error: type `R` does not have expected ability `key`
   ┌─ tests/checking/abilities/globals.move:19:17
   │
19 │         let r = borrow_global_mut<R>(a);
   │                 ^^^^^^^^^^^^^^^^^^^^^^^
